# berkeley-emulation-engine

./: .gitignore  Cargo.toml  README.md  run.py  variables.mk
compiler/: Cargo.toml  env.sh  justfile
compiler/src/: common.rs  fsim.rs  instruction.rs  lib.rs  main.rs  primitives.rs  utils.rs
compiler/src/common/: bitbuf.rs  circuit.rs  config.rs  hwgraph.rs  instruction.rs  mapping.rs  mod.rs  network.rs  primitive.rs  utils.rs
compiler/src/fsim/: board.rs  common.rs  memory.rs  mod.rs  module.rs  processor.rs  sram.rs  switch.rs
compiler/src/passes/: blif_to_circuit.rs  check_connectivity.rs  check_rank.rs  dce.rs  distribute_io.rs  inst_map.rs  inst_schedule.rs  inst_schedule_lpu.rs  mod.rs  parser.rs  partition.rs  partition_lpu.rs  prepartition_set_rank.rs  print_stats.rs  proc_map.rs  register_boundaries.rs  replicate_consts.rs  runner.rs  runner_lpu.rs  set_rank.rs  split_reg_nodes.rs  split_sram_nodes.rs
compiler/src/rtlsim/: blif_sim.rs  emul_rtlsim_testharness.rs  emulrtltestharness.rs  fmodeltestharness.rs  mod.rs  ref_rtlsim_testharness.rs  rtlsim_utils.rs  rtlsimutils.rs  testbench.rs  vcdparser.rs
compiler/src/simif/: dmaif.rs  mmioif.rs  mod.rs  simif.rs
compiler/src/testing/: blifsim.rs  fsim.rs  mod.rs
docs/: emulation-processor.typ  justfile  refs.bib
docs/assets/bee/: compilation-time.xlsx  emulator-diagrams.pptx
emulator/: Makefile  README.md  annos.json  build-xdc.py  build.sc  chisel.mk  generate-xdc.py  mill
emulator/.metals/: metals.lock.db  metals.mv.db
emulator/src/: AXI.scala  AXI4.scala  AXI4DMA.scala  AXI4Helpers.scala  AXI4MMIO.scala  Board.scala  ClockWizardController.scala  Config.scala  DataMemory.scala  DriverGenerator.scala  FPGATop.scala  GCD.scala  InstructionMemory.scala  MemoryMap.scala  Module.scala  Nasti.scala  NastiHelpers.scala  OpalKellyFPGATop.scala  Print.scala  Processor.scala  ReorderQueue.scala  SRAMProcessor.scala  SkidBuffer.scala  Switch.scala  XDMAShim.scala  main.scala  processor.scala
emulator/test/: OpalKellyEmulatorModuleTop.sv  TestHarness.sv  test.py
examples/: Adder.input  Adder.lut.blif  Adder.sv  AdderTop.lut.blif  AdderTop.sv  Cache.input  Cache.lut.blif  Cache.sv  ChipTop.sv  Const.input  Const.sv  Core.input  Core.lut.blif  Core.sv  Counter.input  Counter.lut.blif  Counter.sv  Fir.input  Fir.lut.blif  Fir.sv  GCD-2bit.lut.blif  GCD-testbench.sv  GCD.input  GCD.lut.blif  GCD.sv  MyQueue-testbench.sv  MyQueue.input  MyQueue.lut.blif  MyQueue.sv  OneReadOneWritePortSRAM.input  OneReadOneWritePortSRAM.lut.blif  OneReadOneWritePortSRAM.sv  PointerChasing.input  PointerChasing.lut.blif  PointerChasing.sv  ShiftReg.input  ShiftReg.lut.blif  ShiftReg.sv  SinglePortSRAM.input  SinglePortSRAM.lut.blif  (+10 more)
fpga/alveo-u250/: .gitignore  README.md  flash-fpga.sh
fpga/alveo-u250/design/: Makefile  au250.tcl  create_ip_project.tcl  impl.tcl  instantiate_ip.tcl  (+1 more)
fpga/opal-kelly/: OpalKellyBoard.v  README.md  driver.py
metasim/: Cargo.toml  Makefile  README.md  build.rs
metasim/src/: dut.rs  lib.rs  main.rs  sim.rs
metasim/tests/: tests.rs
scripts/: build-env.sh  conda-lock.yml  create-env.sh  env.yaml
sim/alveo-u250/: Cargo.toml  Makefile  README.md  build.rs  driver  run.sh
sim/alveo-u250/fesvr/: Cargo.toml
sim/alveo-u250/fesvr/src/: elf.rs  errors.rs  frontend.rs  lib.rs  syscall.rs
sim/alveo-u250/src/: lib.rs  main.rs
sim/alveo-u250/src/driver/: dram.rs  driver.rs  mod.rs
sim/alveo-u250/src/simif/: dmaif.rs
sim/driver/: axi.rs  dram.rs  driver.rs  harness.rs  mod.rs  tsi.rs
sim/metasim/: Cargo.toml  Makefile  build.rs
sim/metasim/src/: dut.rs  dut_if.rs  lib.rs  sim.rs
sim/metasim/src/driver/: axi.rs  harness.rs  tsi.rs
sim/metasim/src/simif/: mmioif.rs  mod.rs  simif.rs
sim/metasim/tests/: tests.rs
sim/simif/: dmaif.rs  mod.rs  simif.rs
sims/boardsim/: Cargo.toml  build.rs
sims/fpgatopsim/: Cargo.toml  Makefile  README.md  build.rs  justfile
sims/fpgatopsim/src/: axi.rs  dma_if.rs  dut.rs  dut_if.rs  lib.rs  main.rs  mmio_if.rs  sim.rs  sim_if.rs
src/: main.rs  parser.rs  primitives.rs
src/passes/: dce.rs  inst_map.rs  inst_schedule.rs  instmapping.rs  mod.rs  partition.rs  runner.rs
(+19 files in other folders)
