[package]
name = "blif-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
petgraph = "0.6.5"
kaminpar = { git = "https://github.com/joonho3020/kaminpar-rs.git", branch = "joonho-main" }
