[package]
name = "blif-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
petgraph = "0.6.5"
wellen = "0.9.14"
bytesize = "1.3.0"
clap = "4.5.13"
indicatif = "0.17.8"
serde = { version = "1.0.204", features=["derive"] }
serde_json = "1.0.122"
indexmap = { version = "2.2.6", features=["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
itertools = "0.13.0"
kaminpar = { git = "https://github.com/joonho3020/kaminpar-rs.git", branch = "joonho-main" }
