[package]
name = "xdma-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
bee = { path = "../../compiler" }
bitvec = "1.0.1"
clap = { version = "4.5.20", features = ["derive"] }
indexmap = "2.6.0"
indicatif = "0.17.9"
libc = "0.2.161"
memmap2 = "0.9.5"
rand = "0.8.5"
bytemuck = "1.20.0"
derivative = "2.2.0"
fesvr = { git = "https://github.com/euphoric-hardware/riscv-functional-sim", package = "fesvr" }
# fesvr = { path = "./fesvr/" }

# [profile.dev]
# debug = 0
# strip = "debuginfo"

# [profile.release]
# debug = true
