[package]
name = "fpgatopsim"
version = "0.1.0"
edition = "2021"

[dependencies]
bee = { path = "../../compiler" }
bitvec = "1.0.1"
clap = "4.5.20"
indexmap = "2.6.0"
indicatif = "0.17.9"
rand = "0.8.5"
test-case = "3.3.1"

[build-dependencies]
cc = "1.0"
clap = { version = "4.5.20", features = ["derive"] }

[build]
rustflags = [
    "-C", "link-args=-L./build-dir -lVdut",
    "-C", "link-args=-Wl,-rpath,."
]

[dev-dependencies]
serial_test = "3.1.1"

[profile.dev]
debug = 0
strip = "debuginfo"
