[package]
name = "fpgatopsim"
version = "0.1.0"
edition = "2021"

[dependencies]
bee = { git = "ssh://git@github.com/joonho3020/berkeley-emulation-engine.git", branch = "main" }
clap = "4.5.20"
indexmap = "2.6.0"
test-case = "3.3.1"

[build-dependencies]
cc = "1.0"
clap = { version = "4.5.20", features = ["derive"] }

[build]
rustflags = [
    "-C", "link-args=-L./build-dir -lVdut",
    "-C", "link-args=-Wl,-rpath,."
]

[dev-dependencies]
serial_test = "3.1.1"
